syntax = "proto3";

package user;

option go_package = "proto/userpb";

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
  rpc ValidateToken (TokenRequest) returns (ValidationResponse);
}

message UserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}

message TokenRequest {
  string token = 1;
}

message ValidationResponse {
  bool is_valid = 1;
}
